--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
     <input type="submit">
 </form>
 </body>
-<script type="text/javascript" src="./foo.js"></script>
+<script type="text/javascript" src="./bar.js"></script>
 </html>
